# RealTune

./: .gitignore  LICENSE  Makefile  README.md  RELEASE_PROCESS.md  env_dev.yml  pyproject.toml  requirements_dev.txt
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/workflows/: main.yml  pr_checks.yml
archive/: test_decode_gait.py
docs/source/: conf.py  index.md  installation.md
py_neuromodulation/: pyproject.toml
py_neuromodulation/src/py_neuromodulation/: __init__.py  features.py  oscillatory.py  processor.py  stream_abc.py
requirements/: requirements_dev.txt
scripts/: prepare_changelog.py  release.sh
tests/: analyze_gait.py  cluster.py  permutation.py  plotting.py  plotting_settings.py  test_analyze_gait.py  test_decode_gait.py  timeseries.py
