[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
# See https://setuptools.pypa.io/en/latest/userguide/quickstart.html for more project configuration options.
authors = [
  {name = "Richard M. Köhler", email = "koehler.richard@charite.de"},
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  # Add your own dependencies here
]
dynamic = ["version"]
license = {file = "LICENSE"}
name = "realtune"
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
Changelog = "https://github.com/richardkoehler/RealTune/blob/main/CHANGELOG.md"
Homepage = "https://github.com/richardkoehler/RealTune"
Repository = "https://github.com/richardkoehler/RealTune"
# Documentation = "https://realtune.readthedocs.io/"

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy>=1.0,<1.8",
  "black>=23.0,<24.0",
  "isort>=5.12,<5.13",
  "pytest",
  "pytest-sphinx",
  "pytest-cov",
  "twine>=1.11.0",
  "build",
  "setuptools",
  "wheel",
  "Sphinx>=4.3.0,<7.1.0",
  "furo==2023.7.26",
  "myst-parser>=1.0,<2.1",
  "sphinx-copybutton==0.5.2",
  "sphinx-autobuild==2021.3.14",
  "sphinx-autodoc-typehints==1.23.3",
  "packaging",
]

[tool.setuptools.packages.find]
exclude = [
  "*.tests",
  "*.tests.*",
  "tests.*",
  "tests",
  "docs*",
  "scripts*",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
realtune = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "realtune.VERSION"}

[tool.black]
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''
include = '\.pyi?$'
line-length = 79

[tool.isort]
multi_line_output = 3
profile = "black"

# You can override these pyright settings by adding a personal pyrightconfig.json file.
[tool.pyright]
reportPrivateImportUsage = false

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
no_site_packages = true

[[tool.mypy.overrides]]
module = "tests.*"
strict_optional = false

[tool.pytest.ini_options]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
python_classes = [
  "Test*",
  "*Test",
]
testpaths = "tests/"
